--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
               <div class="stat-label">Projects</div>
             </div>
             <div class="stat-item">
-              <div class="stat-number">2+</div>
+              <div class="stat-number">4+</div>
               <div class="stat-label">Publications</div>
             </div>
           </div>
@@ -1178,3 +1178,6 @@
     window.addEventListener('scroll', throttle(function() {
       // Existing scroll handlers are already attached above
     }, 16)); // ~60fps
+  </script>
+</body>
+</html>
