--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         <div class="hero-left" aria-hidden="false">
           <div class="profile-wrap" title="Tanzin's photo">
             <!-- Replace with your real portrait file; fallback used if missing -->
-            <img src="Tanzin.png" alt="Mohammed Abdul Al Arafat Tanzin portrait" onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&w=600&q=60'">
+            <img src="Tanzin.jpg" alt="Mohammed Abdul Al Arafat Tanzin portrait" onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&w=600&q=60'">
           </div>
 
           <div class="hero-name">
